<resources>
    <string name="app_name">Massenger Screen</string>
    <string name="ibrahim_shehab">ibrahim shehab</string>
    <string name="thank_you_i_m_fine_how_was_yesterday">Thank you i’m fine! How was yesterday?</string>
    <string name="fab_09_46_am">fab., 09:46 AM</string>
    <string name="fri_12_46_pm">fri., 12:46 PM</string>
    <string name="man_ar_u_still_here">Man ar u still here?</string>
</resources>